homebridge/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebridge  # Name of the ingress object
  annotations:
    # (Optional): Annotations for the Ingress Controller
    # -- ingress class is needed when traefik is not the default
    kubernetes.io/ingress.class: traefik
    # ---
    # -- entrypoint and tls configurations
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: pebble
    # traefik.ingress.kubernetes.io/router.tls: "true"
    # ---
    # -- optional middlewares
    # traefik.ingress.kubernetes.io/router.middlewares:your-middleware@kubernetescrd
    # ---
spec:
  rules:
  - host: "homebridge"
    http:
      paths:
      # Path-based routing settings:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homebridge  # The name of the service
            port:
              number: 8581   # Service Portnumber
  - host: "homebridge.crylle.local"
    http:
      paths:
      # Path-based routing settings:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homebridge  # The name of the service
            port:
              number: 8581   # Service Portnumber
